--- a/styles/layout/custom.scss
+++ b/styles/layout/custom.scss
@@ -149,7 +149,7 @@ $spacing-sizes: (
 .menu-toggle-icon {
   position: fixed;
   left: 236px;
-  top: 10rem;
+  top: 7rem;
 
   z-index: 1000;
   // background-color: #fff;
@@ -227,7 +227,7 @@ $spacing-sizes: (
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 100vh;
+  // height: 100vh;
   /* Full viewport height */
 }
 
